		BOUNCEHAMMER/RELEASE_NOTES
-----------------------------------------------------------------------
 $Id: RELEASE_NOTES,v 1.12 2010/03/07 02:11:54 ak Exp $
 -Id: RELEASE_NOTES,v 1.12 2009/12/01 10:35:23 ak Exp -
 -Id: RELEASE_NOTES,v 1.34 2009/08/27 05:09:04 ak Exp -
-----------------------------------------------------------------------
 This listing show the release notes of ``BounceHammer'': open-sourced
 Bounce Mail Parser system. The list shows the version of BounceHammer
 engine, the version of BounceHammer's configuration file, the date of
 release, and a summary of the changes in that release.  More informa-
 tion about BounceHammer available at ``http://bouncehammer.jp/'' .
-----------------------------------------------------------------------
 Copyright (C) 2009,2010 Cubicroot Co. Ltd. ALL RIGHTS RESERVED.
-----------------------------------------------------------------------

-----------------------------------------------------------------------
2.0.1/2.0.0	2010/xx/yy
	Fixed bugs:
		* Correct 2 wrong message token values in the file; src
		  /sql/records-example.sql .
		

-----------------------------------------------------------------------
2.0.0/2.0.0	2010/03/07

	BounceHammer 2.0.0 Release.

-----------------------------------------------------------------------