@@ -1,6 +1,6 @@
 		BOUNCEHAMMER/RELEASE_NOTES
 -----------------------------------------------------------------------
- $Id: RELEASE_NOTES,v 1.12 2010/03/07 02:11:54 ak Exp $
+ $Id: RELEASE_NOTES,v 1.13 2010/03/18 08:48:25 ak Exp $
  -Id: RELEASE_NOTES,v 1.12 2009/12/01 10:35:23 ak Exp -
  -Id: RELEASE_NOTES,v 1.34 2009/08/27 05:09:04 ak Exp -
 -----------------------------------------------------------------------
@@ -15,6 +15,9 @@
 
 -----------------------------------------------------------------------
 2.0.1/2.0.0	2010/xx/yy
+	New files:
+		* examples/request-to-api.pl
+
 	Fixed bugs:
 		* Correct 2 wrong message token values in the file; src
 		  /sql/records-example.sql .
